--- a/style.css
+++ b/style.css
@@ -402,6 +402,7 @@
     font-size: 24px;
     margin: 50px;
     font-weight: bold;
+    
 
 
 }
@@ -440,7 +441,7 @@
 }
 
 @media screen and (max-width:600px){
-    .lowhigh img{
+    .hifi img{
         width: 300px;
         margin-left: 30px;
     }
@@ -451,7 +452,7 @@
     background-color: #0C1B1D ;
     font-family: oswald;
     margin-left: 50px;
-    margin-top: 50px;
+    margin-top: 0px;
 
     
 }
